--- a/css/matchDetailTeam.css
+++ b/css/matchDetailTeam.css
@@ -4,25 +4,92 @@
     left: 2px;
     top: 2px;
     height: 22px;
+    display: inline-flex;
 }
 
 #matchDetailResult p {
     font-size: 105%;
-    top: 12px;
+    top: -6px;
     left: 2px;
     color: white;
     line-height: 0;
 }
 
+.matchDetailPage #towerKills {
+    height: 100%;
+    display: inline-flex;
+    left: 16px;
+    top: 1px;
+}
+
+.matchDetailPage #towerKillIcon {
+    width: 17px;
+    height: 18px;
+    top: 2px;
+}
+
+.matchDetailPage #towerKillCount {
+    top: -3px;
+    font-size: 85%;
+}
+
+.matchDetailPage #dragonKills {
+    height: 100%;
+    display: inline-flex;
+    left: 26px;
+    top: 1px;
+}
+
+.matchDetailPage #dragonKillIcon {
+    width: 17px;
+    height: 18px;
+    top: 2px;
+}
+
+.matchDetailPage #dragonKillCount {
+    top: -3px;
+    font-size: 85%;
+}
+
+.matchDetailPage #baronKills {
+    height: 100%;
+    display: inline-flex;
+    left: 36px;
+    top: 1px;
+}
+
+.matchDetailPage #baronKillIcon {
+    width: 17px;
+    height: 18px;
+    top: 2px;
+}
+
+.matchDetailPage #baronKillCount {
+    top: -3px;
+    font-size: 85%;
+}
+
+.matchDetailPage #teamKda {
+    left: 118px;
+    top: -2px;
+    font-size: 85%;
+}
+
+.matchDetailPage #teamGold {
+    left: 125px;
+    top: 0px;
+    font-size: 69%;
+}
+
 #matchDetailTeam1 {
-    top: -17px;
+    top: -4px;
     left: 2px;
 }
 
 #matchDetailTeam2 {
     position: absolute;
     left: 350px;
-    top: 80px;
+    top: 93px;
 }
 
 #matchDetailTeam1, #matchDetailTeam2 {
