Added Taliyah. Updated assets.

--- a/css/matchDetailPageSplash.css
+++ b/css/matchDetailPageSplash.css
@@ -9,6 +9,11 @@
     background-size: 60%;
 }
 
+.matchDetailPage .matchDetailSelection163 {
+    background-position: 226px -27px;
+    background-size: 60%;
+}
+
 .matchDetailPage .matchDetailSelection26 {
     background-position: 249px -35px;
     background-size: 60%;
