--- a/css/matchDetailPageSplash.css
+++ b/css/matchDetailPageSplash.css
@@ -4,6 +4,11 @@
     background-size: 34%;
 }
 
+.matchDetailPage .matchDetailSelection427 {
+    background-position: 364px -7px;
+    background-size: 34%;
+}
+
 .matchDetailPage .matchDetailSelection136 {
     background-position: 343px -11px;
     background-size: 50%;
@@ -65,7 +70,7 @@
 }
 
 .matchDetailPage .matchDetailSelection19 {
-    background-position: 334px -57px;
+    background-position: 334px -39px;
     background-size: 40%;
 }
 
