Final tweaks for new API

--- a/css/leagueStats.css
+++ b/css/leagueStats.css
@@ -40,7 +40,7 @@
     color: white;
 }
 
-.leagueStats #leaguePoints, .leagueStats #leagueName {
+.leagueStats #leagueProgress, .leagueStats #leagueName {
     color: white;
 }
 
