Revert nonranked stat changes

--- a/css/matchDetailPageSplash.css
+++ b/css/matchDetailPageSplash.css
@@ -4,6 +4,11 @@
     background-size: 40%;
 }
 
+.matchDetailPage .matchDetailSelection516 {
+    background-position: 321px -21px;
+    background-size: 42%;
+}
+
 .matchDetailPage .matchDetailSelection498 {
     background-position: 284px -22px;
     background-size: 48%;
