Implement lazy loading of matches

--- a/css/lolbyte.css
+++ b/css/lolbyte.css
@@ -105,3 +105,9 @@ a {
     color: white;
 }
 
+/* Match Loader Animation */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
