--- a/css/matchDetailPageSplash.css
+++ b/css/matchDetailPageSplash.css
@@ -1,4 +1,9 @@
 /* Custom adjustments for champion splash in match detail selection */
+.matchDetailPage .matchDetailSelection518 {
+    background-position: 325px -14px;
+    background-size: 45%;
+}
+
 .matchDetailPage .matchDetailSelection555 {
     background-position: 353px -18px;
     background-size: 38%;
