--- a/css/leagueStats.css
+++ b/css/leagueStats.css
@@ -1,11 +1,11 @@
 /* League Stats */
 .statsPage .leagueStats {
-    height: 380px;
+    height: 379px;
     width: 54%;
-    float: right;
-    top: -374px;
-    left: -3px;
-    background-image: url('../img/assets/leagueStats.png');
+    position: absolute;
+    top: 0px;
+    right: 3px;
+    background-image: url(../img/assets/leagueStats.png);
 }
 
 .leagueStats p {
