--- a/css/lolbyte.css
+++ b/css/lolbyte.css
@@ -107,3 +107,20 @@ a {
     100% { transform: rotate(360deg); }
 }
 
+/* Loader */
+.loader {
+    border: 16px solid white;
+    border-top: 16px solid #22A8CE;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin: auto;
+    top: 20%;
+    display: none;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
